<resources>
    <string name="app_name">azcar</string>
    <string name="q1">وَذَكِّرْ فَإِنَّ الذِّكْرَى تَنْفَعُ الْمُؤْمِنِين</string>
    <string name="azcar1">أذكارات</string>
    <string name="azcar2">الرقية الشرعية</string>
    <string name="azcar4">روائع النقشبندي</string>
    <string name="q2">أَعُوذُ بِاللهِ مِنَ الشَّيْطَانِ الرَّجِيمِ  \n \n  اللَّهُ لَا إِلَٰهَ إِلَّا هُوَ الْحَيُّ الْقَيُّومُ ۚ لَا تَأْخُذُهُ سِنَةٌ وَلَا نَوْمٌ ۚ لَهُ مَا فِي السَّمَاوَاتِ وَمَا فِي الْأَرْضِ ۗ مَنْ ذَا الَّذِي يَشْفَعُ عِنْدَهُ إِلَّا بِإِذْنِهِ ۚ يَعْلَمُ مَا بَيْنَ أَيْدِيهِمْ وَمَا خَلْفَهُمْ ۖ وَلَا يُحِيطُونَ بِشَيْءٍ مِنْ عِلْمِهِ إِلَّا بِمَا شَاءَ ۚ وَسِعَ كُرْسِيُّهُ السَّمَاوَاتِ وَالْأَرْضَ ۖ وَلَا يَئُودُهُ حِفْظُهُمَا ۚ وَهُوَ الْعَلِيُّ الْعَظِيمُ  \n \n  آية الكرسي [255] سورة البقرة</string>
    <string name="q3">بِسْمِ اللَّهِ الرَّحْمَنِ الرَّحِيمِ \n\nقُلْ هُوَ اللَّهُ أَحَدٌ ﴿1﴾  اللَّهُ الصَّمَدُ ﴿2﴾\n  لَمْ يَلِدْ وَلَمْ يُولَدْ ﴿3﴾  وَلَمْ يَكُنْ لَهُ كُفُوًا أَحَدٌ ﴿4﴾\n</string>
    <string name="q4">\nبِسْمِ اللَّهِ الرَّحْمَنِ الرَّحِيمِ \n\nقُلْ أَعُوذُ بِرَبِّ الْفَلَقِ ﴿1﴾ مِنْ شَرِّ مَا خَلَقَ ﴿2﴾\n وَمِنْ شَرِّ غَاسِقٍ إِذَا وَقَبَ ﴿3﴾ وَمِنْ شَرِّ النَّفَّاثَاتِ فِي الْعُقَدِ ﴿4﴾\n وَمِنْ شَرِّ حَاسِدٍ إِذَا حَسَدَ ﴿5﴾</string>
    <string name="q5">\nبِسْمِ اللَّهِ الرَّحْمَنِ الرَّحِيمِ \n\nقُلْ أَعُوذُ بِرَبِّ النَّاسِ ﴿1﴾ مَلِكِ النَّاسِ ﴿2﴾ إِلَٰهِ النَّاسِ ﴿3﴾\n مِنْ شَرِّ الْوَسْوَاسِ الْخَنَّاسِ ﴿4﴾ الَّذِي يُوَسْوِسُ فِي صُدُورِ النَّاسِ ﴿5﴾\n مِنَ الْجِنَّةِ وَالنَّاسِ ﴿6﴾</string>
    <string name="q6">لا إلهَ إلاَّ اللَّه وحْدهُ لاَ شَرِيكَ لهُ، لَهُ المُلْكُ، ولَهُ الحمْدُ، وَهُو عَلَى كُلِّ شَيءٍ قَدِيرٌ</string>
    <string name="add1">أذكار الصباح والمساء</string>
    <string name="add2">أذكار النوم</string>
    <string name="q7">أَعُوذُ بِاللهِ مِنَ الشَّيْطَانِ الرَّجِيمِ \n\nآمَنَ الرَّسُولُ بِمَا أُنْزِلَ إِلَيْهِ مِنْ رَبِّهِ وَالْمُؤْمِنُونَ \nۚ كُلٌّ آمَنَ بِاللَّهِ وَمَلَائِكَتِهِ وَكُتُبِهِ وَرُسُلِهِ لَا نُفَرِّقُ بَيْنَ أَحَدٍ مِنْ رُسُلِهِ ۚ \nوَقَالُوا سَمِعْنَا وَأَطَعْنَا ۖ غُفْرَانَكَ رَبَّنَا وَإِلَيْكَ الْمَصِيرُ ﴿285﴾\n لَا يُكَلِّفُ اللَّهُ نَفْسًا إِلَّا وُسْعَهَا ۚ لَهَا مَا كَسَبَتْ وَعَلَيْهَا مَا اكْتَسَبَتْ ۗ\n رَبَّنَا لَا تُؤَاخِذْنَا إِنْ نَسِينَا أَوْ أَخْطَأْنَا ۚ رَبَّنَا وَلَا تَحْمِلْ عَلَيْنَا إِصْرًا\n كَمَا حَمَلْتَهُ عَلَى الَّذِينَ مِنْ قَبْلِنَا ۚ رَبَّنَا وَلَا تُحَمِّلْنَا مَا لَا طَاقَةَ لَنَا بِهِ ۖ \nوَاعْفُ عَنَّا وَاغْفِرْ لَنَا وَارْحَمْنَا ۚ أَنْتَ مَوْلَانَا فَانْصُرْنَا عَلَى الْقَوْمِ الْكَافِرِينَ ﴿286﴾ سورة البقرة\n</string>
    <string name="q8">\nبِسْمِ اللَّهِ الرَّحْمَنِ الرَّحِيمِ\n\n قُلْ يَا أَيُّهَا الْكَافِرُونَ ﴿1﴾ لَا أَعْبُدُ مَا تَعْبُدُونَ ﴿2﴾\n وَلَا أَنْتُمْ عَابِدُونَ مَا أَعْبُدُ ﴿3﴾ وَلَا أَنَا عَابِدٌ مَا عَبَدْتُمْ ﴿4﴾\n وَلَا أَنْتُمْ عَابِدُونَ مَا أَعْبُدُ ﴿5﴾ لَكُمْ دِينُكُمْ وَلِيَ دِينِ ﴿6﴾</string>
    <string name="q9">قول سبحان الله 33 مرة \n والحمد لله 33 مرة  والله أكبر 34 مرة\n ويقول اللهم بأسمك أحيا وبسمك أموت</string>
    <string name="q10">\nاللَّهُمَّ رَبَّ السَّمَوَاتِ السَّبْعِ وَرَبَّ الْأَرْضِ، وَرَبَّ الْعَرْشِ الْعَظِيمِ، \nرَبَّنَا وَرَبَّ كُلِّ شَيْءٍ، فَالِقَ الْحَبِّ وَالنَّوَى، وَمُنْزِلَ التَّوْرَاةِ وَالْإِنْجِيلِ وَالْفُرْقَانِ،\n أَعُوذُ بِكَ مِنْ شَرِّ كُلِّ شَيْءٍ أَنْتَ آخِذٌ بِنَاصِيَتِهِ، \nاللَّهُمَّ أَنْتَ الْأَوَّلُ فَلَيْسَ قَبْلَكَ شَيْءٌ، وَأَنْتَ الْآخِرُ فَلَيْسَ بَعْدَكَ شَيْءٌ، \nوَأَنْتَ الظَّاهِرُ فَلَيْسَ فَوْقَكَ شَيْءٌ، وَأَنْتَ الْبَاطِنُ فَلَيْسَ دُونَكَ شَيْءٌ، \nاقْضِ عَنَّا الدَّيْنَ وَأَغْنِنَا مِنَ الْفَقْرِ</string>
    <string name="q11">باسْمِكَ رَبِّ وضَعْتُ جَنْبِي وبِكَ أرْفَعُهُ، إنْ أمْسَكْتَ نَفْسِي فارْحَمْها\n وإنْ أرْسَلْتَها فاحْفَظْها بما تَحْفَظُ به عِبادَكَ الصَّالِحِينَ.</string>
    <string name="q12">\nاللَّهُمَّ أسْلَمْتُ وجْهِي إلَيْكَ، وفَوَّضْتُ أمْرِي إلَيْكَ\n وأَلْجَأْتُ ظَهْرِي إلَيْكَ، رَغْبَةً ورَهْبَةً إلَيْكَ، لا مَلْجَأَ ولَا مَنْجَا مِنْكَ إلَّا إلَيْكَ\n اللَّهُمَّ آمَنْتُ بكِتَابِكَ الذي أنْزَلْتَ، وبِنَبِيِّكَ الذي أرْسَلْتَ</string>
    <string name="q13">أدعيه</string>
    <string name="q15">أصْبَحْنَا وَأصْبَحَ الـمُلْكُ للـهِ، وَالـحَمْدُ لِلَّـهِ، لا إلهَ إلاَّ اللهُ وَحْدَهُ لا شَرِيْكَ لَهُ، لَهُ الـمُلْكُ، ولَهُ الـحَمْدُ، وهُوَ عَلَى كُلِّ شَيءٍ قَدِيرٌ، رَبِّ أسْألُكَ خَيْرَ مَا في هَذَا اليَوْمِ وَخَيْرَ مَا بَعْدَهُ، وأَعُوذُ بِكَ مِنْ شَرِّ مَا فِي هَذَا اليَوْمِ وَشَرِّ مَا بَعْدَهُ، رَبِّ أعُوذُ بِكَ مِنَ الكَسَلِ، وسُوءِ الكِبَرِ، رَبِّ أعُوذُ بِكَ مِنْ عَذَابٍ فِي النَّارِ وعَذَابٍ فِي القَبْرِ</string>
    <string name="q14">أمْسَيْنَا وأمْسَى الـمُلْكُ لِلَّـهِ، وَالـحَمْدُ لِلَّـهِ، لا إلهَ إلاَّ اللهُ وَحْدَهُ لا شَرِيْكَ لَهُ، لَهُ الـمُلْكُ، ولَهُ الـحَمْدُ، وهُوَ عَلَى كُلِّ شَيءٍ قَدِيرٌ، رَبِّ أسْألُكَ خَيْرَ مَا في هَذَه الليلة وَخَيْرَ مَا بَعْدَها، وأَعُوذُ بِكَ مِنْ شَرِّ مَا فِي هَذَا الليلة وَشَرِّ مَا بَعْدَها، رَبِّ أعُوذُ بِكَ مِنَ الكَسَلِ، وسُوءِ الكِبَرِ، رَبِّ أعُوذُ بِكَ مِنْ عَذَابٍ فِي النَّارِ وعَذَابٍ فِي القَبْرِ</string>
    <string name="r1">\nلا الاه الا الله العظيم الحليم\n\n لا الاه الا الله رب العرش العظيم\n\n لا الاه الا الله رب السموات ورب الارض ورب العرش الكريم</string>
    <string name="r2">\nبسم الله اللذى لا يضر مع اسمه شيء فى الارض ولا فى السماء\n\n وهو السميع العليم\n </string>
    <string name="r3">\nبسم الله اعوذ بعزه الله وقدرته من شر ما اجد واحاذر\n</string>
    <string name="r4">\nاعوذ بكلمات الله التامات من شر ماخلق\n</string>
    <string name="r5">\nأعوذ بكلمات التامات من غضبه وعقابه وشر عباده\n \nومن همذات شياطين وأن يحضرون</string>
    <string name="r6">\nأعوذ بكلمات الله التامه من كل شيطان وهامه ومن كل عين لامة\n</string>
    <string name="r7">\nأعوذ بكلمات الله التامات التي لا يجاوزهن بر ولا فاجر \n من شر ماخلق وذرأ وبرأ , ومن شر ماينزل من السماء \n ومن شر مايعرج فيها , ومن شر ما ذرأ فى الارض , ومن شر مايخرج منها\n ومن شر فتن الليل والنهار , ومن شر كل طارق إلا طارق يطرق بخير يارحمن\n</string>
    <string name="r8">\nحسبي الله لا الاه الا هو عليه توكلت وهو رب العرش العظيم\n</string>
    <string name="r9">\nاللَّهمَّ إنِّي أسألُكَ العفوَ والعافيةَ ، في الدُّنيا والآخرةِ \n اللَّهمَّ إنِّي أسألُكَ العفوَ والعافيةَ ، في دِيني و دُنيايَ \n وأهلي ومالي ، اللَّهمَّ استُرْ عَوراتي ، و آمِنْ رَوعاتِي \n اللَّهمَّ احفَظْني من بينِ يديَّ ، ومن خلفي ، وعن يميني \n وعن شمالي ، ومن فَوقِي ، وأعوذُ بعظمتِكَ أن أُغْتَالَ مِن تحتي</string>
    <string name="r10">\nاللهمَّ إني عبدُك ، و ابنُ عبدِك ، و ابنُ أَمَتِك \n ناصيتي بيدِك ، ماضٍ فيَّ حكمُك ، عدلٌ فيَّ قضاؤُك \n أسألُك بكلِّ اسمٍ هو لك سميتَ به نفسَك ، أو علَّمتَه أحدًا من خلقِك \n أو أنزلتَه في كتابِك ، أو استأثرتَ به في علمِ الغيبِ عندَك \n أن تجعلَ القرآنَ ربيعَ قلبي ، و نورَ صدري \n و جلاءَ حزني ، و ذَهابَ همِّي</string>

    <string name="a">اغيب وذي الطائف لا يغيب</string>
    <string name="b">ياقديرا</string>
    <string name="c">العيد أقبل</string>
    <string name="d">النفس تشكو</string>
    <string name="e1">بين خوف وذله وخشوع</string>
    <string name="f">قبضة الله</string>
    <string name="g">إلهي</string>
    <string name="h">أيها الناس</string>
    <string name="i">ربي هب لى هدى</string>
    <string name="j">يارب وحد شملنا</string>
    <string name="k">يامجيب السائلين</string>
    <string name="l">يامن له الامر</string>
    <string name="m">يارب إن عظمت ذنوبى</string>
    <string name="all">أجمل مجموعة تواشيح</string>
    <string name="ft">صلى على سيدنا محمد</string>
</resources>