<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#333333">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/azcar2"
            android:textSize="25dp"
            android:padding="10dp"
            android:textStyle="bold"
            android:textColor="#FFFFFF"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:gravity="center"
            android:background="#706C61"/>




        <ImageButton
            android:id="@+id/r_play1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="25dp"
            android:layout_margin="20dp"
            android:background="@drawable/ic_play"
            />




        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#706C61"
            android:text="@string/r1"
            android:textStyle="bold"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:padding="10dp"
            android:textColor="#FFFFFF"
            android:gravity="center_horizontal"
            android:layout_margin="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#706C61"
            android:text="@string/r2"
            android:textStyle="bold"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:padding="10dp"
            android:textColor="#FFFFFF"
            android:gravity="center_horizontal"
            android:layout_margin="10dp"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#706C61"
            android:text="@string/r3"
            android:textStyle="bold"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:padding="10dp"
            android:textColor="#FFFFFF"
            android:gravity="center_horizontal"
            android:layout_margin="10dp"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#706C61"
            android:text="@string/r4"
            android:textStyle="bold"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:padding="10dp"
            android:textColor="#FFFFFF"
            android:gravity="center_horizontal"
            android:layout_margin="10dp"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#706C61"
            android:text="@string/r5"
            android:textStyle="bold"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:padding="10dp"
            android:textColor="#FFFFFF"
            android:gravity="center_horizontal"
            android:layout_margin="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#706C61"
            android:text="@string/r6"
            android:textStyle="bold"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:padding="10dp"
            android:textColor="#FFFFFF"
            android:gravity="center_horizontal"
            android:layout_margin="10dp"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#706C61"
            android:text="@string/r7"
            android:textStyle="bold"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:padding="10dp"
            android:textColor="#FFFFFF"
            android:gravity="center_horizontal"
            android:layout_margin="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#706C61"
            android:text="@string/r8"
            android:textStyle="bold"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:padding="10dp"
            android:textColor="#FFFFFF"
            android:gravity="center_horizontal"
            android:layout_margin="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#706C61"
            android:text="@string/r9"
            android:textStyle="bold"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:padding="10dp"
            android:textColor="#FFFFFF"
            android:gravity="center_horizontal"
            android:layout_margin="10dp"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#706C61"
            android:text="@string/r10"
            android:textStyle="bold"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:padding="10dp"
            android:paddingBottom="10dp"
            android:textColor="#FFFFFF"
            android:gravity="center_horizontal"
            android:layout_margin="10dp"/>

        <ImageButton
            android:id="@+id/r_play2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="25dp"
            android:layout_margin="20dp"
            android:background="@drawable/ic_play"
            />
    </LinearLayout>



</ScrollView>