<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"

    android:gravity="center_horizontal"
    android:background="#333333"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:gravity="center_horizontal"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:text="@string/q1"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:background="#706C61"/>

        <Button
            android:id="@+id/btn1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/azcar1"
            android:textSize="20dp"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:background="#706C61"
            android:padding="10dp"
            android:layout_margin="30dp"/>

        <Button
            android:id="@+id/btn2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/azcar2"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:background="#706C61"
            android:textSize="20dp"
            android:textAllCaps="false"

            android:padding="10dp"
            android:layout_margin="30dp"/>

        <Button
            android:id="@+id/btn3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#706C61"
            android:text="@string/azcar4"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:textSize="20dp"
            android:textAllCaps="false"

            android:padding="10dp"
            android:layout_margin="30dp"/>




        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ft"
            android:layout_gravity="center_horizontal"
            android:textAllCaps="true"
            android:textColor="#E1F4F3"
            android:textStyle="italic"
            android:layout_marginTop="30dp"
            />


    </LinearLayout>
</ScrollView>